# AgriBiz

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
Controller/: AGW_Controller.hpp  CMakeLists.txt  main.cpp
Controller/HTTP_Requests/: Chips.http  Employees.http  Stamps.http
Controller/include/: ChipController.hpp  EmployeeController.hpp
Controller/src/: ChipController.cpp  EmployeeController.cpp  StampController.cpp
MarketPlace/: CMakeLists.txt  main.cpp
MarketPlace/Action/: AgriBiz_Actions.hpp  CMakeLists.txt  main.cpp
MarketPlace/Action/include/: AddOrder.hpp  BidOrder.hpp  DeleteOrder.hpp  EditOrder.hpp  PostOrder.hpp
MarketPlace/Action/include/Bid/: AddBid.hpp  DeleteBid.hpp  EditBid.hpp  GetBid.hpp
MarketPlace/Action/include/FarmProduce/: AddFarmProduce.hpp  DeleteFarmProduce.hpp  EditFarmProduce.hpp  GetFarmProduce.hpp
MarketPlace/Action/include/Order/: AddOrder.hpp  BidOrder.hpp  DeleteOrder.hpp  EditOrder.hpp  GetOrder.hpp
MarketPlace/Action/src/: AddOrder.cpp
MarketPlace/Action/src/Bid/: AddBid.cpp  DeleteBid.cpp  EditBid.cpp  GetBid.cpp
MarketPlace/Action/src/FarmProduce/: AddFarmProduce.cpp  DeleteFarmProduce.cpp  EditFarmProduce.cpp  GetFarmProduce.cpp
MarketPlace/Action/src/Order/: AddOrder.cpp  BidOrder.cpp  DeleteOrder.cpp  EditOrder.cpp  GetOrder.cpp
MarketPlace/Controller/: AgriBiz_Controller.hpp  CMakeLists.txt  main.cpp
MarketPlace/Controller/include/: BidController.hpp  Controller_Impl.hpp  Controller_Impl.inl  FarmLandController.hpp  FarmProduceController.hpp  OrderController.hpp
MarketPlace/Controller/src/: BidController.cpp  ChipController.cpp  EmployeeController.cpp  FarmLandController.cpp  FarmProduceController.cpp  OrderController.cpp
MarketPlace/Json/: AgriBiz_JsonConversion.hpp  CMakeLists.txt  main.cpp
MarketPlace/Json/include/: BidConverter.hpp  FarmProduceConverter.hpp  OrderConverter.hpp
MarketPlace/Json/src/: BidConverter.cpp  FarmProduceConverter.cpp  OrderConverter.cpp
MarketPlace/Model/: AgriBiz_Model.hpp  CMakeLists.txt  main.cpp
MarketPlace/Model/include/: Bid.hpp  FarmLand.hpp  FarmProduce.hpp  MarketPlace.hpp  Order.hpp
MarketPlace/Model/src/: Bid.cpp  FarmProduce.cpp  MarketPlace.cpp  Order.cpp
MarketPlace/Navigation/: AGW_Navigation.hpp  AgriBiz_Navigation.hpp  CMakeLists.txt
MarketPlace/Navigation/include/: BidNavigator.hpp  ChipNavigator.hpp  FarmProduceNavigator.hpp  NavigationFactory.hpp  OrderNavigator.hpp  StampNavigator.hpp
MarketPlace/Navigation/src/: BidNavigator.cpp  FarmProduceNavigator.cpp  NavigationFactory.cpp  OrderNavigator.cpp  StampNavigator.cpp
MarketPlace/Persistence/: AgriBiz_Persistence.hpp  CMakeLists.txt  db.sql  main.cpp  message.http
MarketPlace/Persistence/include/: BidCRUD.hpp  FarmProduceCRUD.hpp  OrderCRUD.hpp
MarketPlace/Persistence/src/: BidCRUD.cpp  FarmProduceCRUD.cpp  OrderCRUD.cpp
MarketPlace/Persistence_Mongo/: AgriBiz_Persistence.hpp  CMakeLists.txt  db.sql
MarketPlace/Persistence_Mongo/include/: BidCRUD.hpp  FarmProduceCRUD.hpp  OrderCRUD.hpp
MarketPlace/Persistence_Mongo/src/: OrderCRUD.cpp
MarketPlace/Role/: CMakeLists.txt  main.cpp
MarketPlace/Role/include/: AdminRole.hpp  BuyerRole.hpp  SellerRole.hpp
MarketPlace/Test/: CMakeLists.txt
MarketPlace/Test/Persistence/: BidPersistenceTest.cpp  FarmProducePersistenceTest.cpp  OrderPersistenceTest.cpp
MarketPlace/Test/Persistence_Mongo/: OrderPersistenceTest.cpp
Model/: CMakeLists.txt  main.cpp
Model/include/: Bid.hpp  Seller.hpp
Navigation/: CMakeLists.txt
Navigation/include/: EmployeeNavigator.hpp
Navigation/src/: ChipNavigator.cpp  EmployeeNavigator.cpp  NavigationFactory.cpp
Persistence/: AGW_Persistence.hpp  CMakeLists.txt  db.sql  main.cpp  message.http
Persistence/include/: ChipCRUD.hpp  EmployeeCRUD.hpp  StampCRUD.hpp
Persistence/src/: ChipCRUD.cpp  EmployeeCRUD.cpp  StampCRUD.cpp
Server/: CMakeLists.txt
Server/include/: AGWServer.hpp
Server/src/: AGWServer.cpp
Test/: CMakeLists.txt
Test/Controller/: ControllerTest.cpp
Test/Factory/: ModelFactoryTest.cpp
Test/Model/: TimeManagerTest.cpp
Test/Navigation/: EmployeeNavigatorTest.cpp  StampNavigatorTest.cpp
Test/Persistence/: ChipPersistenceTest.cpp  StampPersistenceTest.cpp
Test/Server/: ServerTest.cpp
